# red-team-testbed-for-gpt-oss

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  __init__.py  competition.md  config.yaml  findings.py  generate_example.py  help.py  llm_performance.py  pentest.py  pyproject.toml  report.py  requirements.txt  review.py  setup.py  test_interactive.py  testbed.py
.github/workflows/: ci.yml  lint-type-check.yml  unit-tests.yml
categories/: __init__.py  ai_escalation.py  attachment_ai.py  base.py  cot_overload.py  deception.py  deception_adderall.py  deception_samples.py  deception_security.py  deception_speed_pressure.py  exploit.py  exploit_v2.py  exploit_v3.py  registry.py  supremacy.py
doc/: Best_so_far.md  RCE_python.md  competition_rules.md  draft.md  graphics.md
doc/finding_1/: README.md  server.py
findings/: .gitkeep  deception_example_001.json  export_20250813_102234.json  export_20250813_102826.json  export_20250814_093634.json  export_20250814_154710.json  export_20250819_111753.json  export_20250822_000827.json  export_20250822_153930.json  export_20250822_161228.json  export_20250822_170025.json  export_20250822_171024.json  export_20250822_174353.json  export_20250823_142518.json  finding_discrimination.json  quesma.findings.1.json  quesma.findings.2.json  quesma.findings.3.json  quesma.findings.4.json  quesma.findings.5.json
notebooks/: deception_vulnerability_reproduction.ipynb
sessions/: 2025-08-17_22-14-09_42baa798.json  2025-08-17_23-35-29_8383da27.json
src/: __init__.py  adaptive_attacker.py  constants.py  findings.py  generate_example.py  help.py  interactive_exploit.py  interactive_exploit_v2.py  llm_performance.py  models.py  pentest.py  report.py  review.py  setup.py  simplified_test.py
src/categories/: __init__.py  ai_escalation.py  attachment_ai.py  base.py  best.py  cot_overload.py  deception_adderall.py  deception_samples.py  deception_security.py  deception_speed_pressure.py  exploit.py  exploit_simple.py  exploit_unified.py  exploit_v2.py  exploit_v3.py  finding_1.py  finding_2.py  finding_3.py  finding_4.py  finding_5.py  hate_patterns_v1.py  hate_v1.py  hate_v2.py  rce_v1.py  registry.py  scenario_v1.py  supremacy.py
src/cli/: __init__.py  attack.py  findings.py  help.py  interactive.py  pentest.py  report.py  review.py  sessions.py  setup.py  validate.py
src/evaluators/: __init__.py  base.py  cot_overload.py  deception.py  exploit.py  harmful_content.py  medical.py  reward_hacking.py
src/ui/: __init__.py  cli_findings.py  cli_ui.py
src/utils/: __init__.py  competition_converter.py  evaluation_strategy.py  evaluator.py  findings_generator.py  live_display.py  llm_backend.py  model_client.py  parallel_runner.py  schema_validator.py  session_manager.py  settings_manager.py  testbed_lib.py
tests/: __init__.py  conftest.py  test_evaluator.py  test_evaluators.py  test_flagging_persistence.py  test_llm_backend.py  test_model_client.py  test_models.py  test_parallel_execution.py  test_registry.py  test_repeat_functionality.py  test_repeat_refactor.py  test_save_results.py
ui/: __init__.py  cli_findings.py  cli_ui.py
utils/: __init__.py  evaluator.py  findings_generator.py  live_display.py  model_client.py  testbed_lib.py
