[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpt-oss-red-team-testbed"
version = "1.1.0"
description = "Red-teaming testbed for OpenAI's GPT-OSS-20B model competition"
authors = [
    {name = "Red Team Testbed Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
keywords = ["red-team", "ai-safety", "llm", "security", "vulnerability-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "streamlit>=1.28.0",
    "flask>=2.3.0",
    "jupyter>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "textstat>=0.7.3",
    "colorama>=0.4.6",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/gpt-oss-red-team-testbed"
Repository = "https://github.com/your-org/gpt-oss-red-team-testbed"
Documentation = "https://github.com/your-org/gpt-oss-red-team-testbed/blob/main/README.md"
Issues = "https://github.com/your-org/gpt-oss-red-team-testbed/issues"

[project.scripts]
setup = "src.setup:main"
pentest = "src.pentest:main"
review = "src.review:main"
findings = "src.findings:main"
report = "src.report:main"
help = "src.help:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["categories", "utils", "ui"]

# MyPy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "yaml",
    "requests.*",
    "streamlit.*",
    "plotly.*",
    "textstat.*",
    "tqdm.*"
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
